--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,18 @@
 
     </style>
 
+    <style name="spinner_stylefortimtab" parent="@android:style/Widget.Holo.Light.Spinner">
+        <item name="android:background">@drawable/gradient_spinner</item>
+        <item name="android:layout_marginLeft">2dp</item>
+        <item name="android:layout_marginRight">2dp</item>
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingTop">5dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:popupBackground">@drawable/table_spin_back</item>
+    </style>
+
     <style name="left_column_bold" parent="TextAppearance.AppCompat.Subhead">
         <item name="layout_gravity">right</item>
         <item name="android:textStyle">bold</item>
